finished layout of post-cards for different resolutions, added max 3 lines of content visible per post + fixed sizing .error on infoSymbol in footer

--- a/css/board.css
+++ b/css/board.css
@@ -1,17 +1,28 @@
+.posts-container {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #posts {
-    max-width: 95%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
     margin: 1rem;
     margin-top: 5rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .post-card {
     width: 90%;
-    max-width: 30rem;
-    height: 30rem;
+    max-width: 25rem;
+    height: 25rem;
     border: 2px solid #F1C40F;
     border-radius: 1rem;
     background-image: url("https://picsum.photos/200/300");
@@ -114,4 +125,40 @@
 .like-or-comment-div svg {
     height: 1.5rem;
     width: 1.5rem;
+}
+
+/* ------------------------------------------- SCREEN RESOLUTIONS ----------------------------------------------*/
+@media only screen and (min-width: 1024px) {
+    #posts {
+        margin-top: 1rem;
+        display: grid;
+        grid-template-columns: 25rem 25rem;
+        grid-auto-flow: row;
+        max-width: 49.25rem;
+    }
+        
+    .post-card {
+        place-content: center;
+    }
+}
+
+@media only screen and (min-width: 1300px) {
+    #posts {
+        display: grid;
+        grid-template-columns: 25rem 25rem 25rem;
+        grid-auto-flow: row;
+        max-width: 75.25rem;
+        
+    }
+}
+
+@media only screen and (min-width: 1920px) {
+    #posts {
+        display: grid;
+        grid-template-columns: 25rem 25rem 25rem 25rem;
+        gap: 1rem;
+        grid-auto-flow: row;
+        max-width: 101.25rem;
+        
+    }
 }
